vorbisenc: strip after-eos samples from the end of the eos buffer

https://bugzilla.gnome.org/show_bug.cgi?id=768763